fix(sonar): resolve S1168, S1192 and S6204 in QdrantVectorService
- Return empty Map.of() instead of null when conditions.isEmpty() (S1168)
- Extract duplicated string literals 'match' and 'value' into constants
  MATCH and VALUE (S1192)
- Replace Stream.collect(Collectors.toList()) with Stream.toList()
  and remove unused Collectors import (S6204)